force-app/main/default/objects/Account/fields/Sales_Operations__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations__c</fullName>
    <formula>Territory_Name__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Operations</label>
    <type>Text</type>
</CustomField>