force-app/main/default/objects/Account/fields/Sandbox_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Account_ID__c</fullName>
    <label>Sandbox Account ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>