force-app/main/default/objects/Account/fields/Schools__c.field-meta.xml
<CustomField>
    <fullName>Schools__c</fullName>
    <label>Schools</label>
    <length>10</length>
    <type>Text</type>
</CustomField>