force-app/main/default/objects/Account/fields/Special_Territory_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Special_Territory_Assignment__c</fullName>
    <label>Special Territory Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMETEK</fullName>
            </value>
            <value>
                <fullName>School for the Deaf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>