force-app/main/default/objects/Account/fields/Spring_April_Break_End__c.field-meta.xml
<CustomField>
    <fullName>Spring_April_Break_End__c</fullName>
    <label>Spring (April) Break End</label>
    <type>Date</type>
</CustomField>