force-app/main/default/objects/Account/fields/Spring_April_Break_Start__c.field-meta.xml
<CustomField>
    <fullName>Spring_April_Break_Start__c</fullName>
    <label>Spring (April) Break Start</label>
    <type>Date</type>
</CustomField>