force-app/main/default/objects/Account/fields/Spring_May_Break_End__c.field-meta.xml
<CustomField>
    <fullName>Spring_May_Break_End__c</fullName>
    <label>Spring (May) Break End</label>
    <type>Date</type>
</CustomField>