force-app/main/default/objects/Account/fields/Spring_May_Break_Start__c.field-meta.xml
<CustomField>
    <fullName>Spring_May_Break_Start__c</fullName>
    <label>Spring (May) Break Start</label>
    <type>Date</type>
</CustomField>