force-app/main/default/objects/Account/fields/Starting_Year_of_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Starting_Year_of_Implementation__c</fullName>
    <label>Starting Year of Implementation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>