force-app/main/default/objects/Account/fields/State_School_ID__c.field-meta.xml
<CustomField>
    <fullName>State_School_ID__c</fullName>
    <label>State School ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>