force-app/main/default/objects/Account/fields/Student_Teacher_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Student_Teacher_Ratio__c</fullName>
    <label>Student Teacher Ratio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>