force-app/main/default/objects/Account/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <label>Students</label>
    <length>10</length>
    <type>Text</type>
</CustomField>