force-app/main/default/objects/Account/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
            <value>
                <fullName>Parochial</fullName>
            </value>
            <value>
                <fullName>Montessori</fullName>
            </value>
            <value>
                <fullName>Magnet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>