force-app/main/default/objects/Account/fields/Summer_Delivery_End__c.field-meta.xml
<CustomField>
    <fullName>Summer_Delivery_End__c</fullName>
    <label>Summer Delivery End</label>
    <type>Date</type>
</CustomField>