force-app/main/default/objects/Account/fields/Summer_Delivery_Start__c.field-meta.xml
<CustomField>
    <fullName>Summer_Delivery_Start__c</fullName>
    <label>Summer Delivery Start</label>
    <type>Date</type>
</CustomField>