force-app/main/default/objects/Account/fields/Summery_Delivery_Hours__c.field-meta.xml
<CustomField>
    <fullName>Summery_Delivery_Hours__c</fullName>
    <label>Summery Delivery Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>