force-app/main/default/objects/Account/fields/Teachers__c.field-meta.xml
<CustomField>
    <fullName>Teachers__c</fullName>
    <label>Teachers</label>
    <length>10</length>
    <type>Text</type>
</CustomField>