force-app/main/default/objects/Account/fields/Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID__c</fullName>
    <label>Territory ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>