force-app/main/default/objects/Account/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Name</label>
    <referenceTo>TerritoryName__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>