force-app/main/default/objects/Account/fields/TerritoryOverride__c.field-meta.xml
<CustomField>
    <fullName>TerritoryOverride__c</fullName>
    <inlineHelpText>Overrides the Territory Assignment rules and allows you to set the value yourself. Select &quot;Override by ID&quot;, then enter a value in Territory ID field and the rest of the fields will be populated automatically. To bypass all territory and enter all of the values manually choose &quot;Manual Input&quot; value.</inlineHelpText>
    <label>Territory Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Override by ID</fullName>
            </value>
            <value>
                <fullName>Manual Input</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>