force-app/main/default/objects/Account/fields/Thanksgiving_Break_End__c.field-meta.xml
<CustomField>
    <fullName>Thanksgiving_Break_End__c</fullName>
    <label>Thanksgiving Break End</label>
    <type>Date</type>
</CustomField>