force-app/main/default/objects/Account/fields/Thanksgiving_Break_Start__c.field-meta.xml
<CustomField>
    <fullName>Thanksgiving_Break_Start__c</fullName>
    <label>Thanksgiving Break Start</label>
    <type>Date</type>
</CustomField>