force-app/main/default/objects/Account/fields/Title_1_School_Wide__c.field-meta.xml
<CustomField>
    <fullName>Title_1_School_Wide__c</fullName>
    <label>Title 1 School Wide</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>