force-app/main/default/objects/Account/fields/Winter_Holiday_End__c.field-meta.xml
<CustomField>
    <fullName>Winter_Holiday_End__c</fullName>
    <label>Winter Holiday End</label>
    <type>Date</type>
</CustomField>