force-app/main/default/objects/Account/fields/Winter_Holiday_Start__c.field-meta.xml
<CustomField>
    <fullName>Winter_Holiday_Start__c</fullName>
    <label>Winter Holiday Start</label>
    <type>Date</type>
</CustomField>