force-app/main/default/objects/Account/recordTypes/District.recordType-meta.xml
<RecordType>
    <fullName>District</fullName>
    <active>true</active>
    <label>District</label>
</RecordType>