force-app/main/default/objects/Account/recordTypes/Do_not_use.recordType-meta.xml
<RecordType>
    <fullName>Do_not_use</fullName>
    <active>false</active>
    <label>Do not use</label>
</RecordType>