force-app/main/default/objects/Account/recordTypes/Do_not_use_2.recordType-meta.xml
<RecordType>
    <fullName>Do_not_use_2</fullName>
    <active>false</active>
    <label>Do not use 2</label>
</RecordType>