force-app/main/default/objects/Account/recordTypes/Private_School.recordType-meta.xml
<RecordType>
    <fullName>Private_School</fullName>
    <active>true</active>
    <label>Private School</label>
</RecordType>