force-app/main/default/objects/Account/recordTypes/Public_School.recordType-meta.xml
<RecordType>
    <fullName>Public_School</fullName>
    <active>true</active>
    <label>Public School</label>
</RecordType>