force-app/main/default/objects/Account/validationRules/DisableAddressandNameUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>DisableAddressandNameUpdate</fullName>
    <active>false</active>
    <description>Prevents the users from updating the address if updating is disabled via the custom checkbox.</description>
    <errorConditionFormula>Disable_Address_Update__c 
&amp;&amp;
(
ISCHANGED(ShippingAddress)
||
ISCHANGED(BillingAddress)
||
ISCHANGED(Name)
)</errorConditionFormula>
    <errorDisplayField>Disable_Address_Update__c</errorDisplayField>
    <errorMessage>Account Name and Address cannot be updated.</errorMessage>
</ValidationRule>