force-app/main/default/objects/Account/validationRules/NCES_Public_School_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>NCES_Public_School_ID</fullName>
    <active>false</active>
    <description>Checks to see if this is a public school record and if so enforces the need for an NCES ID</description>
    <errorConditionFormula>AND( 
ISBLANK(ncessch__c),
RecordType.Name = &apos;Public School&apos; 
)</errorConditionFormula>
    <errorMessage>Please enter an NCES ID for this school.</errorMessage>
</ValidationRule>