force-app/main/default/objects/Account/validationRules/No_Scientific_Notation_on_NCES_Public_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Scientific_Notation_on_NCES_Public_ID</fullName>
    <active>true</active>
    <description>This is designed to block having scientific notation uploaded accidentally for NCES Public School IDs</description>
    <errorConditionFormula>CONTAINS( ncessch__c  ,&quot;+&quot;)</errorConditionFormula>
    <errorDisplayField>ncessch__c</errorDisplayField>
    <errorMessage>Please do not enter scientific notation.</errorMessage>
</ValidationRule>