force-app/main/default/objects/Account/validationRules/Prevent_Account_Manager_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Account_Manager_Create</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()
&amp;&amp;
$Profile.Name = &apos;Account Manager&apos;</errorConditionFormula>
    <errorMessage>Please contact your PC to create this Account if there is not already an existing Account in Salesforce.</errorMessage>
</ValidationRule>