force-app/main/default/objects/Account/validationRules/Priority_Customer_Details_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_Customer_Details_Needed</fullName>
    <active>true</active>
    <description>Priority reason and additional details must be filled out if priority customer is checked</description>
    <errorConditionFormula>AND(

Priority_Customer__c = TRUE,

OR(

ISBLANK(Priority_Reason__c),

ISBLANK(Additional_Details__c)

))</errorConditionFormula>
    <errorMessage>Priority reason and additional details must be filled out if priority customer is checked</errorMessage>
</ValidationRule>