force-app/main/default/objects/Account/validationRules/ShippingZipCodeFormat_CA.validationRule-meta.xml
<ValidationRule>
    <fullName>ShippingZipCodeFormat_CA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(ShippingCountry = &quot;CAN&quot;, ShippingCountry = &quot;CA&quot;, ShippingCountry = &quot;Canada&quot;),
NOT(REGEX(ShippingPostalCode, &quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;))
)</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>Please provide a valid Canadian Zip Code.</errorMessage>
</ValidationRule>