force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ICRM_Account_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>