force-app/main/default/objects/Account/listViews/AM_Alfred_Juarez.listView-meta.xml
<ListView>
    <fullName>AM_Alfred_Juarez</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Alfred Juarez</value>
    </filters>
    <label>AM - Alfred Juarez</label>
</ListView>