force-app/main/default/objects/Account/listViews/AM_Andy_Canterna.listView-meta.xml
<ListView>
    <fullName>AM_Andy_Canterna</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Andy Canterna</value>
    </filters>
    <label>AM - Andy Canterna</label>
</ListView>