force-app/main/default/objects/Account/listViews/AM_Andy_Lowrey.listView-meta.xml
<ListView>
    <fullName>AM_Andy_Lowrey</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Andy Lowrey</value>
    </filters>
    <label>AM - Andy Lowrey</label>
</ListView>