force-app/main/default/objects/Account/listViews/AM_Angela_Brotherton.listView-meta.xml
<ListView>
    <fullName>AM_Angela_Brotherton</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Angela Brotherton</value>
    </filters>
    <label>AM - Angela Brotherton</label>
</ListView>