force-app/main/default/objects/Account/listViews/AM_Angie_Crouse.listView-meta.xml
<ListView>
    <fullName>AM_Angie_Crouse</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Angie Crouse</value>
    </filters>
    <label>AM - Angie Crouse</label>
</ListView>