force-app/main/default/objects/Account/listViews/AM_Dan_Herbst.listView-meta.xml
<ListView>
    <fullName>AM_Dan_Herbst</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Dan Herbst</value>
    </filters>
    <label>AM - Dan Herbst</label>
</ListView>