force-app/main/default/objects/Account/listViews/AM_Evan_Glasson.listView-meta.xml
<ListView>
    <fullName>AM_Evan_Glasson</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Evan Glasson</value>
    </filters>
    <label>AM - Evan Glasson</label>
</ListView>