force-app/main/default/objects/Account/listViews/AM_Gloria_Acey_Davis.listView-meta.xml
<ListView>
    <fullName>AM_Gloria_Acey_Davis</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>contains</operation>
        <value>Gloria</value>
    </filters>
    <label>AM - Gloria Acey-Davis</label>
</ListView>