force-app/main/default/objects/Account/listViews/AM_Greg_Rotundo.listView-meta.xml
<ListView>
    <fullName>AM_Greg_Rotundo</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Greg Rotundo</value>
    </filters>
    <label>AM - Greg Rotundo</label>
</ListView>