force-app/main/default/objects/Account/listViews/AM_Jamie_Butler.listView-meta.xml
<ListView>
    <fullName>AM_Jamie_Butler</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Jamie Butler</value>
    </filters>
    <label>AM - Jamie Butler</label>
</ListView>