force-app/main/default/objects/Account/listViews/AM_Jeannie_Cassidy.listView-meta.xml
<ListView>
    <fullName>AM_Jeannie_Cassidy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Northeast Temp</value>
    </filters>
    <label>AM - Jeannie Cassidy</label>
</ListView>