force-app/main/default/objects/Account/listViews/AM_Karen_Haddaway.listView-meta.xml
<ListView>
    <fullName>AM_Karen_Haddaway</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Karen Haddaway</value>
    </filters>
    <label>AM - Karen Haddaway</label>
</ListView>