force-app/main/default/objects/Account/listViews/AM_Kelley_Stacy.listView-meta.xml
<ListView>
    <fullName>AM_Kelley_Stacy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Kelley Stacy</value>
    </filters>
    <label>AM - Kelley Stacy</label>
</ListView>